# MyFastAPI

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/my_project/: config.py  main.py
src/my_project/api/: __init__.py  user.py
src/my_project/models/: __init__.py
src/my_project/schemas/: user.py
src/my_project/services/: __init__.py  user_service.py
src/myfastapi/: main.py
src/myfastapi/models/: user.py
src/myfastapi/utils/: __init__.py
